--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.2",
     "html-template-tag": "^1.0.0",
+    "marked": "^0.6.1",
     "morgan": "^1.9.0",
     "node-time-ago": "^1.0.0",
     "pg": "^7.8.2",
